# admet-xgb

./: README.md  pyproject.toml
scripts/: test_admet_xgb.py
src/admet_xgb/: README.md  __init__.py  api.py  core.py  predictors.py
src/admet_xgb/models/: ames_modern_xgb.json  ames_modern_xgb.meta.json  bbb_martins_modern_xgb.json  bbb_martins_modern_xgb.meta.json  cyp2c9_veith_modern_xgb.json  cyp2c9_veith_modern_xgb.meta.json  cyp2d6_veith_modern_xgb.json  cyp2d6_veith_modern_xgb.meta.json  cyp3a4_veith_modern_xgb.json  cyp3a4_veith_modern_xgb.meta.json  dili_modern_xgb.json  dili_modern_xgb.meta.json  herg_modern_xgb.json  herg_modern_xgb.meta.json  pgp_broccatelli_modern_xgb.json  pgp_broccatelli_modern_xgb.meta.json
